--- a/2 - Covid19/Panorama_do_COVID_19_no_Brasil_PedroFleury.ipynb
+++ b/2 - Covid19/Panorama_do_COVID_19_no_Brasil_PedroFleury.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/psfleury/Data_Science_Projects/blob/main/Panorama_do_COVID_19_no_Brasil_PedroFleury.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/psfleury/Data_Science_Projects/blob/main/2%20-%20Covid19/Panorama_do_COVID_19_no_Brasil_PedroFleury.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -99,8 +99,8 @@
         "import seaborn as sns\n",
         "\n",
         "\n",
-        "# importar o dataset COVID-19 para um DataaFrame\n",
-        "df = pd.read_csv(\"https://raw.githubusercontent.com/psfleury/covid-19-data/master/public/data/owid-covid-data.csv\")"
+        "# importar o dataset COVID-19 para um DataFrame\n",
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/psfleury/Data_Science_Projects/main/2%20-%20Covid19/owid-covid-data.csv\")"
       ],
       "execution_count": 1,
       "outputs": []
@@ -112,12 +112,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zKaN5EgiLeLK",
-        "outputId": "5c4f1c4a-3517-4e03-9d02-493762e0a0f6"
+        "outputId": "429e0582-9d62-41e0-b19a-de8faaede85a"
       },
       "source": [
         "df.shape"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,7 +129,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 2
         }
       ]
     },
@@ -141,12 +141,12 @@
           "height": 309
         },
         "id": "8bRfKkQvMR65",
-        "outputId": "1cd9bd4b-5bf6-4455-a69a-4c87b5011e8a"
+        "outputId": "883aa2bc-cfb8-44ff-b14c-5baf3969210a"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -578,7 +578,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 3
         }
       ]
     },
